fix alignment

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -55,7 +55,6 @@ input {
     position: absolute;
     top: 10px;
     left: 10px;
-    text-align: center;
     font-weight: bold;
     font-family: Helvetica;
     text-shadow: 0 0 5px rgba(0,0,0,0.4);
